@@ -454,8 +454,8 @@ static inline StatRecord_t *stat_hash_insert(uint64_t *value, uint8_t prot, int 
 
 static void Expand_StatTable_Blocks(int hash_num);
 
-static inline void PrintSortedFlowcache(SortElement_t *SortList, uint32_t maxindex, int limit_count, int GuessFlowDirection, 
-	printer_t print_record, int tag, int ascending, extension_map_list_t *extension_map_list );
+static inline void PrintSortedFlowcache(SortElement_t *SortList, uint32_t maxindex, outputParams_t *outputParams, 
+		int GuessFlowDirection, printer_t print_record, int ascending, extension_map_list_t *extension_map_list );
 
 static void PrintStatLine(stat_record_t	*stat, uint32_t printPlain, StatRecord_t *StatData, int type, int order_proto, int tag, int inout);
 
@@ -1428,7 +1428,7 @@ struct tm	*tbuff;
 } // End of PrintCvsStatLine
 
 
-void PrintFlowTable(printer_t print_record, uint32_t topN, int tag, int GuessDir, extension_map_list_t *extension_map_list) {
+void PrintFlowTable(printer_t print_record, outputParams_t *outputParams, int GuessDir, extension_map_list_t *extension_map_list) {
 hash_FlowTable *FlowTable;
 FlowTableRecord_t	*r;
 master_record_t		*aggr_record_mask;
@@ -1490,8 +1490,8 @@ char				*string;
 		if ( c >= 2 )
  			heapSort(SortList, c, 0);
 
-		PrintSortedFlowcache(SortList, maxindex, topN, GuessDir, 
-			print_record, tag, order_mode[PrintOrder].direction, extension_map_list);
+		PrintSortedFlowcache(SortList, maxindex, outputParams, GuessDir, 
+			print_record, order_mode[PrintOrder].direction, extension_map_list);
 
 	} else {
 		// print them as they came
@@ -1503,7 +1503,7 @@ char				*string;
 				common_record_t *raw_record;
 				int map_id;
 
-				if ( topN && c >= topN )
+				if ( outputParams->topN && c >= outputParams->topN )
 					return;
 
 				// we want to print only those flows which pass the packet or byte limits
@@ -1554,7 +1554,7 @@ char				*string;
 	   			   ( flow_record->srcport < 49152 ) && ( flow_record->dstport >= 49152 ))
 					SwapFlow(flow_record);
 
-				print_record((void *)flow_record, &string, tag);
+				print_record((void *)flow_record, &string, outputParams->doTag);
 				printf("%s\n", string);
 
 				c++;
@@ -1564,7 +1564,7 @@ char				*string;
 	}
 } // End of PrintFlowTable
 
-void PrintFlowStat(func_prolog_t record_header, printer_t print_record, int topN, int tag, int quiet, int cvs_output, extension_map_list_t *extension_map_list) {
+void PrintFlowStat(func_prolog_t record_header, printer_t print_record, outputParams_t *outputParams, extension_map_list_t *extension_map_list) {
 hash_FlowTable *FlowTable;
 FlowTableRecord_t	*r;
 SortElement_t 		*SortList;
@@ -1628,15 +1628,15 @@ uint32_t			maxindex, c;
 
 	maxindex = c;
 
-	if ( !(quiet || cvs_output) ) 
+	if ( !(outputParams->quiet || outputParams->modeCsv) ) 
 		printf("Aggregated flows %u\n", maxindex);
 
 	if ( c >= 2 )
- 		heapSort(SortList, c, topN);
-	if ( !quiet ) {
-		if ( !cvs_output ) {
-			if ( topN != 0 )
-				printf("Top %i flows ordered by %s:\n", topN, order_mode[order_index].string);
+ 		heapSort(SortList, c, outputParams->topN);
+	if ( !outputParams->quiet ) {
+		if ( !outputParams->modeCsv ) {
+			if ( outputParams->topN != 0 )
+				printf("Top %i flows ordered by %s:\n", outputParams->topN, order_mode[order_index].string);
 			else
 				printf("Top flows ordered by %s:\n", order_mode[order_index].string);
 		}
@@ -1644,7 +1644,7 @@ uint32_t			maxindex, c;
 			record_header();
 	}
 
-	PrintSortedFlowcache(SortList, maxindex, topN, 0, print_record, tag, DESCENDING, extension_map_list);
+	PrintSortedFlowcache(SortList, maxindex, outputParams, 0, print_record, DESCENDING, extension_map_list);
 
 	// process all the remaining stats, if requested
 	for ( order_index++ ; order_mode[order_index].string != NULL; order_index++ ) {
@@ -1660,18 +1660,18 @@ uint32_t			maxindex, c;
 			}
 
 			if ( maxindex >= 2 )
- 				heapSort(SortList, maxindex, topN);
-			if ( !quiet ) {
-				if ( !cvs_output ) {
-					if ( topN != 0 ) 
-						printf("Top %i flows ordered by %s:\n", topN, order_mode[order_index].string);
+ 				heapSort(SortList, maxindex, outputParams->topN);
+			if ( !outputParams->quiet ) {
+				if ( !outputParams->modeCsv ) {
+					if ( outputParams->topN != 0 ) 
+						printf("Top %i flows ordered by %s:\n", outputParams->topN, order_mode[order_index].string);
 					else
 						printf("Top flows ordered by %s:\n", order_mode[order_index].string);
 				}
 				if ( record_header ) 
 					record_header();
 			}
-			PrintSortedFlowcache(SortList, maxindex, topN, 0, print_record, tag, DESCENDING, extension_map_list);
+			PrintSortedFlowcache(SortList, maxindex, outputParams, 0, print_record, DESCENDING, extension_map_list);
 
 		}
 	}
@@ -1679,8 +1679,8 @@ uint32_t			maxindex, c;
 
 } // End of PrintFlowStat
 
-static inline void PrintSortedFlowcache(SortElement_t *SortList, uint32_t maxindex, int limit_count, int GuessFlowDirection, 
-	printer_t print_record, int tag, int ascending, extension_map_list_t *extension_map_list ) {
+static inline void PrintSortedFlowcache(SortElement_t *SortList, uint32_t maxindex, outputParams_t *outputParams, 
+	int GuessFlowDirection, printer_t print_record, int ascending, extension_map_list_t *extension_map_list ) {
 hash_FlowTable *FlowTable;
 master_record_t		*aggr_record_mask;
 int	i, max;
@@ -1689,8 +1689,6 @@ int	i, max;
 	aggr_record_mask = GetMasterAggregateMask();
 
 	max = maxindex;
-	if ( limit_count && limit_count < maxindex )
-		max = limit_count;
 	for ( i = 0; i < max; i++ ) {
 		master_record_t	*flow_record;
 		common_record_t *raw_record;
@@ -1741,13 +1739,13 @@ int	i, max;
 	   	   ( flow_record->srcport < 49152 ) && ( flow_record->dstport >= 49152 ))
 			SwapFlow(flow_record);
 
-		print_record((void *)flow_record, &string, tag);
+		print_record((void *)flow_record, &string, outputParams->doTag);
 		printf("%s\n", string);
 	}
 
 } // End of PrintSortedFlowcache
 
-void PrintElementStat(stat_record_t	*sum_stat, uint32_t printPlain, printer_t print_record, int topN, int tag, int quiet, int pipe_output, int cvs_output) {
+void PrintElementStat(stat_record_t	*sum_stat, outputParams_t *outputParams, printer_t print_record) {
 SortElement_t	*topN_element_list;
 uint32_t		numflows;
 int32_t 		i, j, hash_num, order_index;
@@ -1761,13 +1759,13 @@ int32_t 		i, j, hash_num, order_index;
 		for ( order_index=0; order_mode[order_index].string != NULL; order_index++ ) {
 			unsigned int order_bit = (1<<order_index);
 			if ( order & order_bit ) {
-				topN_element_list = StatTopN(topN, &numflows, hash_num, order_index);
+				topN_element_list = StatTopN(outputParams->topN, &numflows, hash_num, order_index);
 
 				// this output formating is pretty ugly - and needs to be cleaned up - improved
-				if ( !pipe_output && !cvs_output && !quiet  ) {
-					if ( topN != 0 ) 
+				if ( !outputParams->modePipe && !outputParams->modeCsv && !outputParams->quiet  ) {
+					if ( outputParams->topN != 0 ) 
 						printf("Top %i %s ordered by %s:\n", 
-							topN, StatParameters[stat].HeaderInfo, order_mode[order_index].string);
+							outputParams->topN, StatParameters[stat].HeaderInfo, order_mode[order_index].string);
 					else
 						printf("Top %s ordered by %s:\n", 
 							StatParameters[stat].HeaderInfo, order_mode[order_index].string);
@@ -1780,7 +1778,7 @@ int32_t 		i, j, hash_num, order_index;
 							StatParameters[stat].HeaderInfo);
 				}
 
-				if ( cvs_output ) {
+				if ( outputParams->modeCsv ) {
 					if ( order_mode[order_index].inout == IN )
 						printf("ts,te,td,pr,val,fl,flP,ipkt,ipktP,ibyt,ibytP,ipps,ibps,ibpp\n");
 					else if ( order_mode[order_index].inout == OUT )
@@ -1789,24 +1787,24 @@ int32_t 		i, j, hash_num, order_index;
 						printf("ts,te,td,pr,val,fl,flP,pkt,pktP,byt,bytP,pps,bps,bpp\n");
 				}
 
-				j = numflows - topN;
+				j = numflows - outputParams->topN;
 				j = j < 0 ? 0 : j;
-				if ( topN == 0 )
+				if ( outputParams->topN == 0 )
 					j = 0;
 				for ( i=numflows-1; i>=j ; i--) {
 					//if ( !topN_element_list[i].count )
 						//break;
 
 					// Again - ugly output formating - needs to be cleaned up
-					if ( pipe_output ) 
+					if ( outputParams->modePipe ) 
 						PrintPipeStatLine((StatRecord_t *)topN_element_list[i].record, type, 
-							StatRequest[hash_num].order_proto, tag, order_mode[order_index].inout);
-					else if ( cvs_output ) 
-						PrintCvsStatLine(sum_stat, printPlain, (StatRecord_t *)topN_element_list[i].record, type, 
-							StatRequest[hash_num].order_proto, tag, order_mode[order_index].inout);
+							StatRequest[hash_num].order_proto, outputParams->doTag, order_mode[order_index].inout);
+					else if ( outputParams->modeCsv ) 
+						PrintCvsStatLine(sum_stat, outputParams->printPlain, (StatRecord_t *)topN_element_list[i].record, type, 
+							StatRequest[hash_num].order_proto, outputParams->doTag, order_mode[order_index].inout);
 					else
-						PrintStatLine(sum_stat, printPlain, (StatRecord_t *)topN_element_list[i].record, 
-							type, StatRequest[hash_num].order_proto, tag, order_mode[order_index].inout);
+						PrintStatLine(sum_stat, outputParams->printPlain, (StatRecord_t *)topN_element_list[i].record, 
+							type, StatRequest[hash_num].order_proto, outputParams->doTag, order_mode[order_index].inout);
 				}
 				free((void *)topN_element_list);
 				printf("\n");
