@@ -1,3 +1,6 @@
+2020-04-05
+- internal: put output parameters in a single struct
+
 2020-03-29
 - Release 1.6.20
 - More cleanup on plain number printing
